@@ -1,3 +1,7 @@
+32
+
+* #5542: Repackaged as a Pippy application. (cscott)
+
 31
 
 * Updated translations: fa, is (pootle)
